--- a/src/styles/map-analysis.css
+++ b/src/styles/map-analysis.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
+  height: 100dvh;
   background: #111;
   color: #eee;
 }
